Changed the theme color and Logo Icon

--- a/app/design/adminhtml/default/default/template/example.phtml
+++ b/app/design/adminhtml/default/default/template/example.phtml
@@ -28,7 +28,7 @@
 <html lang="en">
         <head>
             <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-            <title><?php echo Mage::helper('adminhtml')->__('Magento Commerce - Administrative Panel') ?></title>
+            <title><?php echo Mage::helper('adminhtml')->__('Darpae - Administrative Panel') ?></title>
             <style type="text/css" media="all">
                 /*<![CDATA[*/ @import "<?php echo $this->getSkinUrl('styles.css') ?>"; /*]]>*/
             </style>
@@ -294,7 +294,7 @@
 <!--[ends] .middle -->
 
             <div class="footer">
-                <p>Copyright &copy; 2008 Magento Commerce. All Right Reserved.<br/>
+                <p>Copyright &copy; 2008 Darpae. All Right Reserved.<br/>
                 <strong>Version 1.0</strong> | Powered by <a href="http://www.varien.com" target="varien">Varien</a></p>
             </div>
     </body>
