--- a/skin/frontend/dp/dp-theme/css/cmsmart/megamenu/megamenu.css
+++ b/skin/frontend/dp/dp-theme/css/cmsmart/megamenu/megamenu.css
@@ -4,7 +4,7 @@
   position: relative;  
   z-index: 4; 
   width: 100%;
-  background: #72d5cd;
+  background: #fd6604;
 		border-top:solid 1px #fff;
 }
 .nav-container-mobile {display: none;}
